--- a/package.json
+++ b/package.json
@@ -22,60 +22,75 @@
     "db:types": "supabase gen types typescript --local > src/types/supabase.ts"
   },
   "dependencies": {
-    "react": "19.0.0-rc.1",
-    "react-dom": "19.0.0-rc.1",
-    "react-router-dom": "^6.30.0",
-    "@supabase/supabase-js": "^2.45.4",
-    "@supabase/auth-helpers-react": "^0.5.0",
-    "@tanstack/react-query": "^5.17.0",
-    "zustand": "^4.4.7",
-    "framer-motion": "^11.0.0",
-    "lucide-react": "^0.344.0",
-    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-dialog": "^1.0.5",
-    "@radix-ui/react-toast": "^1.1.5",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-switch": "^1.0.3",
     "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.45.4",
+    "@tanstack/react-query": "^5.17.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
     "date-fns": "^3.3.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
     "react-hook-form": "^7.49.0",
-    "@hookform/resolvers": "^3.3.4",
+    "react-router-dom": "^6.30.0",
+    "sonner": "^1.4.0",
+    "tailwind-merge": "^2.2.0",
     "zod": "^3.22.4",
-    "sonner": "^1.4.0"
+    "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@playwright/test": "^1.41.0",
+    "@testing-library/jest-dom": "^6.2.0",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
-    "@types/node": "^20.11.0",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "@vitest/ui": "^1.2.0",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jsdom": "^24.0.0",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "supabase": "^1.142.0",
+    "tailwindcss": "^3.4.1",
+    "terser": "^5.44.0",
     "typescript": "^5.3.3",
     "vite": "^5.4.8",
-    "vitest": "^1.2.0",
-    "@vitest/ui": "^1.2.0",
-    "jsdom": "^24.0.0",
-    "@testing-library/react": "^14.1.2",
-    "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/user-event": "^14.5.2",
-    "@playwright/test": "^1.41.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.17",
-    "supabase": "^1.142.0"
+    "vitest": "^1.2.0"
   },
   "engines": {
-    "node": ">=18.0.0",
+    "node": ">=20.0.0",
     "npm": ">=9.0.0"
+  },
+  "overrides": {
+    "@floating-ui/react-dom": {
+      "react": "19.0.0-rc.1",
+      "react-dom": "19.0.0-rc.1"
+    }
+  },
+  "peerDependenciesMeta": {
+    "react": {
+      "optional": false
+    },
+    "react-dom": {
+      "optional": false
+    }
   }
 }
