--- a/package.json
+++ b/package.json
@@ -37,14 +37,19 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.0",
+    "file-type": "^21.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
+    "pdfjs-dist": "^5.4.149",
     "react": "19.0.0-rc.1",
     "react-dom": "19.0.0-rc.1",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.49.0",
+    "react-pdf": "^10.1.0",
     "react-router-dom": "^6.30.0",
     "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.0",
+    "tesseract.js": "^6.0.1",
     "zod": "^3.22.4",
     "zustand": "^4.4.7"
   },
