revert: 사전 분석 단계를 이전 안정 버전으로 복원

--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,7 @@
   },
   "rewrites": [
     {
-      "source": "/((?!api/|assets/|vite\\.svg).*)",
+      "source": "/((?!api/).*)",
       "destination": "/index.html"
     }
   ],
