--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.3.0",
+    "docx": "^9.5.1",
+    "file-saver": "^2.0.5",
     "file-type": "^21.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.344.0",
@@ -62,6 +64,7 @@
     "@testing-library/jest-dom": "^6.2.0",
     "@testing-library/react": "^14.1.2",
     "@testing-library/user-event": "^14.5.2",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
