refactor: 인증 시스템 에러 처리 개선 - 프로덕션 환경 최적화

--- a/.gitignore
+++ b/.gitignore
@@ -126,3 +126,12 @@ playwright/.cache/
 
 # Local development
 .env.local
+
+# Claude Code settings
+.claude/
+
+# Screenshots and images (temporary files)
+*.png
+*.jpg
+*.jpeg
+*.gif
